--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,13 @@ theme = 'ananke'
   body_classes = "courier bg-near-white"
   site_logo = "img/logo.png"
   favicon = "favicon-32x32.png"
+  [[params.ananke_socials]]
+    name = "facebook"
+    url = "https://www.facebook.com/MatematiskFagraad"
+
+  [[params.ananke_socials]]
+    name = "github"
+    url = "https://github.com/Det-Faellesmatematiske-Fagrad"
 
 [markup]
   [markup.goldmark]
