--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = 'Det Fællesmatematiske Fagråd'
 theme = 'ananke'
 
 [params]
-  body_classes = "courier bg-near-white"
+  body_classes = "bg-near-white"
   site_logo = "img/logo.png"
   favicon = "favicon-32x32.png"
   [[params.ananke_socials]]
